# plotter-rs

./: .gitignore  Cargo.toml  README.md  index.html  rustfmt.toml
.github/workflows/: deploy.yml  release.yml
src/: app.rs  lib.rs  main.rs
