[package]
name = "plotter-rs"
version = "0.1.1"
edition = "2024"
authors = ["mteit <medelin.teit@gmail.com>"]
description = "Simple plotter in Rust"
repository = "https://github.com/mteit/plotter-rs"
license = "GPL-3.0"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
math-parser = { git = "https://github.com/mteit/math-parser", tag="0.2.1" }
