[package]
name = "plotter-rs"
version = "0.2.0"
edition = "2024"
authors = ["mteit <medelin.teit@gmail.com>"]
description = "Simple plotter in Rust"
repository = "https://github.com/mteit/plotter-rs"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
math-parser = { git = "https://github.com/mteit/math-parser", tag = "v0.4.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
